# tag-vfs

./: .gitignore  README.md  TODO.md  build.gradle
java/: build.gradle  settings.gradle
java/gradle/wrapper/: gradle-wrapper.properties
java/src/main/java/archive/: FileDirectoryEntry.java
java/src/main/java/data/: Directory.java  ErrorFile.java  FileExtensions.java  FileType.java  LinkFile.java
java/src/main/java/exceptions/: ConfigParseException.java
java/src/main/resources/: .conf.json
rs/: CLAUDE.md  Cargo.toml  Makefile  TASKS.md  TODO.md
rs/src/: lib.rs  main.rs
rs/src/app/: app.rs  command_line_app.rs  mod.rs  run_configuration.rs
rs/src/archive/: archive.rs  archive_manager.rs  file_directory_entry.rs  file_end_metadata.rs  file_metadata.rs  mod.rs  tag_directory_entry.rs  tag_lookup_entry.rs
rs/src/data/: file_instance.rs  file_type.rs  mod.rs
rs/src/exceptions/: config_parse_error.rs  mod.rs
rs/src/loader/: mod.rs
rs/src/resources/: .conf.json  user.conf.json
rs/src/util/: mod.rs  named_file.rs
src/main/java/: Main.java  RunConfiguration.java
src/main/java/app/: App.java  CommandLineApp.java  Main.java  RunConfiguration.java
src/main/java/archive/: Archive.java  ArchiveFactory.java  ArchiveManager.java  FileDirectoryEntry.java  FileEndMetadata.java  FileMetadata.java  TagDirectoryEntry.java  TagLookupEntry.java
src/main/java/data/: FileInstance.java  ImageFile.java  PlainText.java  RichText.java
src/main/java/loader/: FileImporter.java
src/main/java/util/: Conversion.java
src/main/resources/: user.conf.json
(+1 files in other folders)
