[package]
name = "tag-vfs"
version = "0.1.0"
edition = "2021"

# [[bin]]
# name = "server"
# path = "src/server/main.rs"

# [[bin]]
# name = "cli"
# path = "src/cli/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "4.0"
memmap2 = "0.5"
